A lot of modifications but the most importat is that finally there's no need to deal with Scala Futures. Instead the Future is converted into a cats-effect IO monad

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
-target/
-.idea/
-project/target
+backend/target/
+backend/.idea/
+backend/project/target
+backend/project/project/
+frontend/node_modules
+frontend/elm-stuff
+frontend/dist
