--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-restapi/target/
-restapi/.idea/
-restapi/project/target
-restapi/project/project/
+target/
+backend/.idea/
+backend/restapi/target/
+backend/subsocket/target/
+backend/subscraper/target/
 frontend/node_modules
 frontend/elm-stuff
 frontend/dist
